# netflix-data-mine

./: .gitignore  README.md  pyproject.toml
Docs/: how-to.md
src/: main.py
src/data/ready/: clean.xlsx
